[package]
name = "wakey"
version = "0.1.1"

authors = ["Hubert Bugaj<lesny.rumcajs@gmail.com>"]
edition = "2018"

license = "MIT"
repository = "https://github.com/LesnyRumcajs/wakey"

description = "Wake-on-LAN library for creating and sending magic WOL packets."
keywords = ["wol", "wake-on-lan"]
categories = ["network-programming"]

[dependencies]
hex = "0.3.2"